--- a/Jcrud/src/main/resources/templates/index.html
+++ b/Jcrud/src/main/resources/templates/index.html
@@ -10,9 +10,15 @@
     <input type="text" th:field="*{content}" />
     <button type="submit">save</button>
 </form>
+
 <h1>To Do List</h1>
 <tr th:each="post : ${listPosts}">
-    <a th:href="@{'/update_post/' + ${post.id}}"><ul><td th:text="${post.content}">Content</td></ul></a>
+    <a th:href="@{'/update_post/' + ${post.id}}">
+    	<ul>
+    		<td th:text="${post.content}">Content</td>
+    	</ul>
+    </a>
 </tr>
+
 </body>
 </html>
